2008-07-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlcomposition.c: (gnl_composition_handle_message),
	(no_more_pads_object_cb), (update_pipeline):
	Fix race-issue when unblocking top-level pad because the update_pipeline
	method isn't atomic (the objects lock is released in the middle).
	Also ignore ERROR/WARNING coming from elements which aren't in the
	currently configured stack. This is mostly related to a big issue with
	reverse negotiation in dynamic pipelines.

2008-05-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	* docs/libs/inspect/plugin-gnonlin.xml:
	Plugin info as changed (email addresses).

2008-05-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlcomposition.c: (gnl_composition_init),
	(gnl_composition_finalize), (gnl_composition_handle_message),
	(update_pipeline):
	Don't use the objects_lock to protect the message handling, instead
	use a new lock (messages_lock). Avoids a stupid deadlock.

2008-05-30  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnl.c:
	* gnl/gnl.h:
	* gnl/gnlcomposition.c:
	* gnl/gnlcomposition.h:
	* gnl/gnlfilesource.c:
	* gnl/gnlfilesource.h:
	* gnl/gnlobject.c:
	* gnl/gnlobject.h:
	* gnl/gnloperation.c:
	* gnl/gnlsource.c:
	* gnl/gnlsource.h:
	Update email adresses of wim and edward to working adresses.
	Use less GNL_* casting macros that actually also do typechecking for
	all parts where it is not needed, and instead use simple casting.

2008-05-27  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlcomposition.c: (add_message), (flush_messages),
	(replace_message), (has_message), (dump_messages),
	(gnl_composition_handle_message), (no_more_pads_object_cb),
	(update_pipeline):
	Properly accumulate segment_start/segment_done messages so that we only
	switch segment when all segment_done have been emitted.
	Inspired by the logic in gstbin.
	* gnl/gnloperation.c: (get_unlinked_sink_ghost_pad),
	(remove_sink_pad), (synchronize_sinks),